--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 <!-- Default Header -->
 <section id="header" class="dark">
 	<header>
-		<h1>PASTING.IO pepito </h1>
+		<h1>PASTING.IO </h1>
 		<p>Paste and share your text. Fast, free and real time support</p>
 		<p></p>
 		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
