--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,7 @@
 <section class="main">
 	<header>
 		<div class="container">
-			<h2>PASTING.IO pepote user</h2>
+			<h2>PASTING.IO</h2>
 			<p>Paste and share your text. Fast, free and real time support</p>
 			<p id="textArea"></p>
 		</div>
@@ -10,7 +10,7 @@
 		<div class="container">
 			<section>
 				<header>
-					<h3>Pasting Cloud history: <span id="userSpan"> <%= user %> </span></h3>
+					<h3>Pasting Cloud history: <span id="userSpan"> <%= obj.user %> </span></h3>
 				</header>
 				<div class="table-wrapper">
 					<table class="default">
