--- a/app/templates/shared.html
+++ b/app/templates/shared.html
@@ -2,9 +2,9 @@
 <section id="mainFeatures" class="main">
 	<header>
 		<div class="container">
-			<h2>PASTING MAIN FEATURES</h2>
-			<p>Comparte texto entre diferentes dispositivos y colegas de manera sensilla. <br />
-			Ya no más auto-emails. Tu clipboard al mundo en un solo click</p>
+			<h2>Paste and Share text or code</h2>
+			<p>PASTING.IO is simple and fast. Kill the middle man<br />
+			Your clipboard in all devices with one click; Anywhere, Anytime</p>
 		</div>
 	</header>
 	<div class="content dark style1 featured">
@@ -53,19 +53,19 @@
 <section id="pasteText" class="main">
 	<header>
 		<div class="container">
-			<h2>SHARE YOUR TEXT </h2>
-			<h2>or EMIT IN REAL TIME </h2>
+			<h2>SHARE YOUR CLIPBOARD</h2>
+			<h2>or EMIT IN REAL TIME</h2>
 		</div>
 	</header>
 	<div class="content style4 featured">
 		<div class="container 75%">
 			<form method="post" action="#" name="pastingForm">
 				<div class="row 50%">
-					<div class="6u"><input type="text" name="email" placeholder="Enter an username, email or secret phrase" id="email" required /></div>
-					<div class="6u"><input type="text" placeholder="Set password (Optional)" /></div>
+					<div class="6u"><input type="text" name="email" placeholder="Enter username, email or secret phrase" id="email" required /></div>
+					<div class="6u"><input type="text" placeholder="Set password" /></div>
 				</div>
 				<div class="row 50%">
-					<div class="12u"><textarea placeholder="Paste or type your text!" id="pastingStr" required></textarea></div>
+					<div class="12u"><textarea placeholder="Paste or type your text here!" id="pastingStr" required></textarea></div>
 				</div>
 				<div class="row">
 					<div class="12u">
@@ -86,7 +86,7 @@
 	<div class="content dark style3">
 		<div class="container">
 			<h2>OUR TEAM</h2>
-			<p>Breve descripción de la filosfia/historia del equipo y circulos centrados con las imagenes de c/u<br /></p>
+			<p>--<br /></p>
 		</div>
 	</div>
 </section>
@@ -95,9 +95,9 @@
 <section id="footer">
 	<ul class="icons">
 		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-		<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 		<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 	</ul>
 	<div class="copyright">
 		<ul class="menu">
