--- a/app/templates/shared.html
+++ b/app/templates/shared.html
@@ -3,29 +3,31 @@
 	<header>
 		<div class="container">
 			<h2>Paste and Share text or code</h2>
-			<p>PASTING.IO is simple and fast. Kill the middle man<br />
+			<p>PASTING.IO is simple and fast. Kill the middle man.<br />
 			Your clipboard in all devices with one click; Anywhere, Anytime</p>
 		</div>
 	</header>
 	<div class="content dark style1 featured">
 		<div class="container">
 			<div class="row">
+
+				<div class="4u">
+					<section>
+						<span class="feature-icon"><span class="icon fa-cloud"></span></span>
+						<header>
+							<h3>Cloud & Real Time </h3>
+						</header>
+						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere.</p>
+					</section>
+				</div>
+
 				<div class="4u">
 					<section>
 						<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
 						<header>
 							<h3>Fast & Free</h3>
 						</header>
-						<p>Texto descri</p>
-					</section>
-				</div>
-				<div class="4u">
-					<section>
-						<span class="feature-icon"><span class="icon fa-cloud"></span></span>
-						<header>
-							<h3>Cloud & Real Time</h3>
-						</header>
-						<p>Texto descri</p>
+						<p>Sharing is fast now. </br> You can do it with a simple click and there is no need to pay anything for it. </p>
 					</section>
 				</div>
 				<div class="4u">
@@ -34,7 +36,7 @@
 						<header>
 							<h3>By Nerds, for Nerds </h3>
 						</header>
-						<p>Texto descri</p>
+						<p>Not only you can share text, but also code! The code you've shared can be seen highlighted. Just thought for nerds! </p>
 					</section>
 				</div>
 			</div>
