Backbone models - save - fetch

--- a/app/templates/shared.html
+++ b/app/templates/shared.html
@@ -63,16 +63,16 @@
 		<div class="container 75%">
 			<form method="post" action="#" name="pastingForm">
 				<div class="row 50%">
-					<div class="6u"><input type="text" name="email" placeholder="Enter username, email or secret phrase" id="email" required /></div>
-					<div class="6u"><input type="text" placeholder="Set password" /></div>
+					<div class="6u"><input type="text" name="email" placeholder="Enter or create your username here" id="email" required /></div>
+					<div class="6u"><input type="text" placeholder="Enter or create your password here" id="pwd" /></div>
 				</div>
 				<div class="row 50%">
-					<div class="12u"><textarea placeholder="Paste or type your text here!" id="pastingStr" required></textarea></div>
+					<div class="12u"><textarea placeholder="Paste or type your text!" id="pastingStr" required></textarea></div>
 				</div>
 				<div class="row">
 					<div class="12u">
 						<ul class="actions">
-							<li><input type="submit" class="button" value="Share Now!" /></li>
+							<li><input type="submit" class="button" value="Share Now!" id="shareBtn" /></li>
 							<li><input type="submit" class="button realTime" value="Real Time!" id="realTimeBtn" /></li>
 							<li><input type="reset" class="button alt" value="Clear Text " /></li>
 						</ul>
