--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -13,41 +13,8 @@
 					<h3>Pasting Cloud history: <span id="userSpan"> <%= obj.user %> </span></h3>
 				</header>
 				<div class="table-wrapper">
-					<table class="default">
-						<thead>
-							<tr>
-								<th>ID</th>
-								<th>Name</th>
-								<th>Description</th>
-								<th>Action</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>00001</td>
-								<td>Lorem ipsum dolor</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td>Delete</td>
-							</tr>
-							<tr>
-								<td>00002</td>
-								<td>Sit amet nullam</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td>Delete</td>
-							</tr>
-							<tr>
-								<td>00003</td>
-								<td>Feugiat felis viverra</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td>Delete</td>
-							</tr>
-							<tr>
-								<td>00004</td>
-								<td>Sagittis enim felis</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td>Delete</td>
-							</tr>
-						</tbody>
+					<table class="default" id="pastesTable">
+						
 					</table>
 				</div>
 			</section>
