Code higlight and some refactors

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 <section id="header" class="dark">
 	<header>
 		<h1>PASTING.IO </h1>
-		<p>Paste and share text or code. Fast, free and the real time support</p>
+		<p>Paste and share text or code. Fast, free and real time support</p>
 		<p></p>
 		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
 		 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
