--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -1,21 +1,19 @@
 <thead>
 	<tr>
 		<th>#</th>
-		<th>Date</th>
 		<th>Text</th>
 		<th>Action</th>
 	</tr>
 </thead>
 <tbody>
 	<%
-    var length = obj.pastes.length;
-    for (var index = 0; index < length; index++) {
+    var length = obj.pastes.length - 1;
+    for (var index = 1; index < length; index++) {
     	var paste = obj.pastes[index];
 	%>
 		<tr>
-			<td><%= index %></td>
-			<td><%= paste.date %></td>
-			<td><%= paste.text %></td>
+			<td><%= index+1 %></td>
+			<td><pre><%= paste.text %></pre></td>
 			<td>Actions</td>
 		</tr>
 	<% } %>
