Code highlight functions

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,9 +1,9 @@
 <!-- Default Header -->
 <section id="header" class="dark">
+	<img src="assets/images/logo.png"/>
 	<header>
-		<h1>PASTING.IO </h1>
+		<!-- <h1>PASTING.IO </h1> -->
 		<p>Paste and share text or code. Fast, free and real time support</p>
-		<p></p>
 		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
 		 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
 		</div>
