--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -1,10 +1,3 @@
-<thead>
-	<tr>
-		<th>#</th>
-		<th>Text</th>
-		<th>Action</th>
-	</tr>
-</thead>
 <tbody>
 	<%
     var length = obj.pastes.length - 1;
@@ -12,9 +5,17 @@
     	var paste = obj.pastes[index];
 	%>
 		<tr>
-			<td><%= index+1 %></td>
-			<td><pre><%= paste.text %></pre></td>
-			<td>Actions</td>
+			<td>
+				<ul class="menu">
+					<li><a>COPY TEXT</a></li>
+					<li><a>COPY LINK</a></li>
+					<li><a>RAW</a></li>
+					<li><a>DELETE</a></li>
+				</ul>
+				<pre class="codePaste">
+					<%= paste.text %>
+				</pre>
+			</td>
 		</tr>
 	<% } %>
 </tbody>
