--- a/app/templates/shared.html
+++ b/app/templates/shared.html
@@ -2,8 +2,8 @@
 <section id="mainFeatures" class="main">
 	<header>
 		<div class="container">
-			<h2>Paste and Share text or code</h2>
-			<p>PASTING.IO is simple and fast. Kill the middle man.<br />
+			<h2>PASTING.IO</h2>
+			<p>Sharing is simple and fast. Kill the middle man.<br />
 			Your clipboard in all devices with one click; Anywhere, Anytime</p>
 		</div>
 	</header>
@@ -51,12 +51,12 @@
 	</div>
 </section>
 
-<!-- pastingSection (pasteText) -->
+<!-- pastingSection -->
 <section id="pasteText" class="main">
 	<header>
 		<div class="container">
+			<h2>GET YOUR PASTING CLOUD</h2>
 			<h2>SHARE YOUR CLIPBOARD</h2>
-			<h2>or EMIT IN REAL TIME</h2>
 		</div>
 	</header>
 	<div class="content style4 featured">
@@ -69,12 +69,14 @@
 				<div class="row 50%">
 					<div class="12u"><textarea placeholder="Paste or type your text!" id="pastingStr" required></textarea></div>
 				</div>
+				<p>Create your username and access your pastes by entering: pasting.io/yourUsername</p>
 				<div class="row">
 					<div class="12u">
 						<ul class="actions">
-							<li><input type="submit" class="button" value="Share Now!" id="shareBtn" /></li>
-							<li><input type="submit" class="button realTime" value="Real Time!" id="realTimeBtn" /></li>
-							<li><input type="reset" class="button alt" value="Clear Text " /></li>
+							<li><input type="submit" class="button" value="Share Public" id="shareBtn" /></li>
+							<li><input type="submit" class="button" value="Share Secret" id="shareBtnSecret" /></li>
+							<li><input type="submit" class="button realTime" value="Real Time" id="realTimeBtn" /></li>
+							<!-- <li><input type="reset" class="button alt" value="Clear Text " /></li> -->
 						</ul>
 					</div>
 				</div>
@@ -83,11 +85,11 @@
 	</div>
 </section>
 
-<!-- ourTeam -->
+<!-- pastingTeam -->
 <section id="ourTeam" class="main">
 	<div class="content dark style3">
 		<div class="container">
-			<h2>OUR TEAM</h2>
+			<h2>PASTING TEAM</h2>
 			<p>--<br /></p>
 		</div>
 	</div>
@@ -103,7 +105,9 @@
 	</ul>
 	<div class="copyright">
 		<ul class="menu">
-			<li>&copy; JSCLOUD. All rights reserved.</li><li><a href="http://pasting.io">PASTING.IO</a></li>
+			<li><a href="http://pasting.io">PASTING.IO</a></li>
+			<li>&copy; JSCLOUD. All rights reserved.</li>
+			<li><a href="http://blog.pasting.io">OUR BLOG</a></li>
 		</ul>
 	</div>
 </section>
