somes fixes and configs tpl

--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -6,15 +6,15 @@
 	%>
 		<tr>
 			<td>
-				<ul class="menu">
+				<textarea class="codePaste">
+<%= paste.text %>
+				</textarea>
+			<ul class="menu">
 					<li><a>COPY TEXT</a></li>
 					<li><a>COPY LINK</a></li>
 					<li><a>RAW</a></li>
 					<li><a>DELETE</a></li>
 				</ul>
-				<pre class="codePaste">
-					<%= paste.text %>
-				</pre>
 			</td>
 		</tr>
 	<% } %>
