--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,17 +6,17 @@
 
 			<p></p>
 
+			<pre id="textArea"></pre>
+
 			<ul class="menu">
 				<li><a>COPY TEXT</a></li>
 				<li><a>COPY LINK</a></li>
 				<li><a>RAW</a></li>
 				<li><a>DELETE</a></li>
 			</ul>
-
-			<pre id="textArea"></pre>
 		</div>
 	</header>
-	<div class="content style1 dark">
+	<div class="content styleCustom dark">
 		<div class="container">
 			<section>
 				<header>
