--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -922,6 +922,12 @@
 							linear-gradient(45deg, #5f796b, #3a4e59, #2f394e);
 			}
 
+			.main > .content.styleCustom
+			{
+				background: url('images/overlay.png'),
+					linear-gradient(45deg, #384955, #655361, #85505f);
+			}
+
 			.main > .content.style4
 			{
 				padding-top: 0;
