--- a/app/templates/defaultPaste.html
+++ b/app/templates/defaultPaste.html
@@ -1,3 +1,3 @@
-<pre class="codePaste">
-	<%= obj.defaultPaste.text %>
-</span>
+<textarea id="defaultPaste">
+<%= obj.defaultPaste.text %>
+</textarea>
