--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -9,7 +9,7 @@
 		</div>
 	</header>
 	<footer>
-		<a href="#mainFeatures" class="button scrolly">Pasting Features ?</a>
-		<a href="#pasteText" class="button scrolly" id="pastingButton">or Type and share !</a>
+		<a href="#mainFeatures" class="button scrolly">Pasting Features</a>
+		<a href="#pasteText" class="button scrolly" id="pastingButton">Get Pasting Now !</a>
 	</footer>
 </section>
