--- a/app/assets/css/ie/v9.css
+++ b/app/assets/css/ie/v9.css
@@ -14,27 +14,20 @@
 
 		.main > .content.style1
 		{
-			background:	url('../images/bgtr.svg') top right no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/overlay.png'),
-						url('images/content-style1.svg');
+			background-color: rgba(66, 104, 162, 1);
 		}
 
 		.main > .content.style2
 		{
-			background:	url('../images/bgtr.svg') top right no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/overlay.png'),
-						url('images/content-style2.svg');
+			background-color: #507DC2;
 		}
 
 		.main > .content.style3
 		{
-			background:	url('../images/bgtr.svg') top right no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/bgbl.svg') bottom left no-repeat,
-						url('../images/overlay.png'),
-						url('images/content-style3.svg');
+			background-color: rgba(28, 28, 29, 1);
+		}
+
+		.main > .content.styleCustom
+		{
+			background-color: #507DC2;
 		}
