--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,6 +1,6 @@
 <!-- Default Header -->
 <section id="header" class="dark">
-	<img src="assets/images/logo.png"/>
+	<i class="icon-pasting-logo"></i>
 	<header>
 		<!-- <h1>PASTING.IO </h1> -->
 		<p>Paste and share text or code. Fast, free and real time support</p>
