--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -19,3 +19,35 @@
 .button.realTime {
 	background-color: #E04646;
 }
+
+#header i.icon-pasting-logo {
+	font-size: 15vh;
+}
+
+/* Pasting font icon */
+@font-face {
+	font-family: 'pasting';
+	src:url('../fonts/pasting.eot?km24ma');
+	src:url('../fonts/pasting.eot?#iefixkm24ma') format('embedded-opentype'),
+		url('../fonts/pasting.woff?km24ma') format('woff'),
+		url('../fonts/pasting.ttf?km24ma') format('truetype'),
+		url('../fonts/pasting.svg?km24ma#pasting') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'pasting';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pasting-logo:before {
+	content: "\e600";
+}
