--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -25,20 +25,20 @@
 
 				<div class="4u">
 					<section>
-						<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
+						<span class="feature-icon"><span class="icon fa-bullhorn"></span></span>
 						<header>
 							<h3>Fast & Free</h3>
 						</header>
-						<p>Sharing is fast now. </br> You can do it with a simple click and there is no need to pay anything for it. </p>
+						<p>Sharing is fast now. </br> You can do it with a simple click and there is no need to pay anything for it. You can generate one or more accounts.</p>
 					</section>
 				</div>
 				<div class="4u">
 					<section>
-						<span class="feature-icon"><span class="icon fa-slideshare"></span></span>
+						<span class="feature-icon"><span class="icon fa-rocket"></span></span>
 						<header>
 							<h3>By Nerds, for Nerds </h3>
 						</header>
-						<p>Not only you can share text, but also code! The code you've shared can be seen highlighted. Just thought for nerds! </p>
+						<p>The code you've shared can be seen highlighted. Use Pasting.io in your console. <a href="#pastingConsole" class="scrolly">Get the powerfull pasting-cli. </a> Just thought for nerds! </p>
 					</section>
 				</div>
 			</div>
@@ -46,9 +46,9 @@
 				<div class="12u">
 					<footer>
 						<% if (obj.header) { %>
-							<a href="#pasteText" class="button scrolly">Start Pasting Now !</a>
+							<a href="#pasteText" class="button scrolly">Get Pasting Now !</a>
 						<% } else { %>
-							<a href="http://pasting.io" class="button scrolly">Start Pasting Now !</a>
+							<a href="/" class="button scrolly">Get Pasting Now !</a>
 						<% } %>
 					</footer>
 				</div>
