--- a/app/templates/pastingSection.html
+++ b/app/templates/pastingSection.html
@@ -2,7 +2,7 @@
 <section id="pasteText" class="main">
 	<header>
 		<div class="container">
-			<h2>GET YOUR PASTING CLOUD</h2>
+			<h2>CREATE YOUR PASTING CLOUD</h2>
 			<h2>SHARE YOUR CLIPBOARD</h2>
 		</div>
 	</header>
@@ -21,8 +21,8 @@
 					<div class="12u">
 						<ul class="actions">
 							<li><input type="submit" class="button" value="Share Public" id="shareBtn" /></li>
-							<li><input type="submit" class="button" value="Share Secret" id="shareBtnSecret" /></li>
-							<li><input type="submit" class="button realTime" value="Real Time" id="realTimeBtn" /></li>
+							<li><input type="submit" class="button" value="Share Private" id="shareBtnSecret" /></li>
+							<!-- <li><input type="submit" class="button realTime" value="Real Time" id="realTimeBtn" /></li> -->
 							<!-- <li><input type="reset" class="button alt" value="Clear Text " /></li> -->
 						</ul>
 					</div>
