--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -3,13 +3,13 @@
 	<i class="icon-pasting-logo"></i>
 	<header>
 		<!-- <h1>PASTING.IO </h1> -->
-		<p>Paste and share text or code. Fast, free and real time support</p>
+		<p>Paste and share text or code. Simple, fast and free</p>
 		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
 		 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
 		</div>
 	</header>
 	<footer>
 		<a href="#mainFeatures" class="button scrolly">Pasting Features</a>
-		<a href="#pasteText" class="button scrolly" id="pastingButton">Get Pasting Now !</a>
+		<a href="#pasteText" class="button scrolly" id="pastingButton">Get Pasting Now</a>
 	</footer>
 </section>
