Document view routing

--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -1,7 +1,7 @@
 <tbody>
 	<%
     var length = obj.pastes.length - 1;
-    for (var index = 1; index < length; index++) {
+    for (var index = 1; index <= length; index++) {
     	var paste = obj.pastes[index];
 	%>
 		<tr>
