--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -1,6 +1,7 @@
 <!-- mainFeatures -->
 <section id="mainFeatures" class="main">
 
+	<% if (obj.title) { %>
 	<header>
 		<div class="container">
 			<h2>PASTING.IO</h2>
@@ -8,6 +9,7 @@
 			Your clipboard in all devices with one click; Anywhere, Anytime</p>
 		</div>
 	</header>
+	<% } %>
 
 	<div class="content dark style1 featured">
 		<div class="container">
