Show document view url

--- a/app/templates/documentPublic.html
+++ b/app/templates/documentPublic.html
@@ -1,7 +1,7 @@
 <section class="main">
 	<header>
 		<div class="container">
-			<h2>pasting.io/<%= obj.user %></h2>
+			<h2>pasting.io/<%= obj.user %>/<%= obj.documentId %></h2>
 			<p></p>
 			<ul class="menu">
 				<li><a>COPY TEXT</a></li>
