--- a/app/templates/pastingConsole.html
+++ b/app/templates/pastingConsole.html
@@ -13,8 +13,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="container">
-					<h2>Install via: <a href="https://www.npmjs.com"> npm </a> </h2>
-					<p style="background-color: rgba(0, 0, 0, 0.64);"> sudo npm install -g pastingio </p>
+					<h2>Install via: <a href="https://www.npmjs.com/package/pasting"> npm </a> </h2>
+					<p style="background-color: rgba(0, 0, 0, 0.64);"> sudo npm install -g pasting </p>
 
 					<h2>Configure your Pasting.io credentials </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);"> pasting -u yourUsername -p yourPassword </p>
