--- a/app/templates/userPublic.html
+++ b/app/templates/userPublic.html
@@ -4,7 +4,7 @@
 			<h2>pasting.io/<%= obj.user %></h2>
 			<p></p>
 			<ul class="menu">
-				<li><a>COPY TEXT</a></li>
+				<!-- <li><a>COPY TEXT</a></li> -->
 				<li><a>COPY LINK</a></li>
 				<li><a>RAW</a></li>
 				<li><a>DELETE</a></li>
