--- a/app/templates/userPublic.html
+++ b/app/templates/userPublic.html
@@ -5,10 +5,11 @@
 			<p></p>
 			<ul class="menu">
 				<!-- <li><a>COPY TEXT</a></li> -->
-				<li><a>COPY LINK</a></li>
+				<li><a data-clipboard-text="http://pasting.io/<%= obj.user %>" title="Click to copy link" class="p-copy">COPY LINK</a></li>
 				<li><a>RAW</a></li>
 				<li><a>DELETE</a></li>
 			</ul>
+
 			<pre id="textArea"></pre>
 		</div>
 	</header>
