--- a/app/templates/pastingTeam.html
+++ b/app/templates/pastingTeam.html
@@ -1,9 +1,73 @@
 <!-- pastingTeam -->
 <section id="ourTeam" class="main">
+
+
+	<header>
+		<div class="container">
+			<h2>PASTING.IO</h2>
+			<p>Sharing is simple and fast. Kill the middle man.<br />
+			Your clipboard in all devices with one click; Anywhere, Anytime</p>
+		</div>
+	</header>
+
+	
 	<div class="content dark style3">
+
 		<div class="container">
 			<h2>PASTING TEAM</h2>
-			<p>--<br /></p>
+			<div class="row">
+				<div class="4u">
+					<section>
+						<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
+						<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
+						tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
+						vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
+						augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
+						lorem ipsum dolor placerat magna tempus feugiat.</p>
+					</section>
+				</div>
+				<div class="8u">
+					<div class="row no-collapse">
+						<div class="6u">
+							<a href="#" class="image fit">
+								<img src="https://farm9.staticflickr.com/8650/16132444130_ba7f50ffe1.jpg" alt="" height="260px;"/>
+								<h2>Juan Sanzone | Software Enginner </h2>
+							</a>
+
+							<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
+		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+	<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
+					
+						</div>
+						<div class="6u">
+							<a href="#" class="image fit">
+								<img src="https://farm8.staticflickr.com/7524/16318962732_0afc407a2f.jpg" alt="" height="260px"/>
+								<h2>Alejandro Bednarik | System Enginner</h2>
+							</a>
+
+														<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
+		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+	<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
+		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
+
+
+						
+						</div>
+					</div>
+					<div class="row no-collapse">
+						<div class="6u">
+							
+			
+						</div>
+						<div class="6u">
+							
+					
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
 	</div>
 </section>
