--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -7,10 +7,11 @@
 		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 	</ul>
 	<div class="copyright">
+		<a href="http://pasting.io/team">OUR TEAM</a>
 		<ul class="menu">
 			<li><a href="http://pasting.io">PASTING.IO</a></li>
 			<li>&copy; JSCLOUD. All rights reserved.</li>
-			<li><a href="http://blog.pasting.io">OUR BLOG</a></li>
+			<li><a href="http://blog.pasting.io">TECH BLOG</a></li>
 		</ul>
 	</div>
 </section>
