Polish UI .. more

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -7,9 +7,9 @@
 		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 	</ul>
 	<div class="copyright">
-		<a href="http://pasting.io/team">OUR TEAM</a>
+		<a href="/team">OUR TEAM</a>
 		<ul class="menu">
-			<li><a href="http://pasting.io">PASTING.IO</a></li>
+			<li><a href="/">PASTING.IO</a></li>
 			<li>&copy; JSCLOUD. All rights reserved.</li>
 			<li><a href="http://blog.pasting.io">TECH BLOG</a></li>
 		</ul>
