--- a/app/templates/pastingTeam.html
+++ b/app/templates/pastingTeam.html
@@ -1,7 +1,6 @@
 <!-- pastingTeam -->
 <section id="ourTeam" class="main">
 
-
 	<header>
 		<div class="container">
 			<h2>PASTING.IO</h2>
@@ -10,9 +9,7 @@
 		</div>
 	</header>
 
-	
 	<div class="content dark style3">
-
 		<div class="container">
 			<h2>PASTING TEAM</h2>
 			<div class="row">
@@ -22,47 +19,22 @@
 						<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
 						tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
 						vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
-						augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis 
-						lorem ipsum dolor placerat magna tempus feugiat.</p>
+						augue cubilia vivamus nisi eu eget ornare varius gravida euismod.</p>
 					</section>
 				</div>
 				<div class="8u">
 					<div class="row no-collapse">
 						<div class="6u">
-							<a href="#" class="image fit">
-								<img src="https://farm9.staticflickr.com/8650/16132444130_ba7f50ffe1.jpg" alt="" height="260px;"/>
+							<a href="https://ar.linkedin.com/in/juansanzone" class="image fit">
+								<img src="https://farm9.staticflickr.com/8650/16132444130_ba7f50ffe1_n.jpg"/>
 								<h2>Juan Sanzone | Software Enginner </h2>
 							</a>
-
-							<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
-	<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
-					
 						</div>
 						<div class="6u">
-							<a href="#" class="image fit">
-								<img src="https://farm8.staticflickr.com/7524/16318962732_0afc407a2f.jpg" alt="" height="260px"/>
+							<a href="https://ar.linkedin.com/in/alejandrobednarik" class="image fit">
+								<img src="https://farm8.staticflickr.com/7544/16137524750_4b6ebd1c90_n.jpg"/>
 								<h2>Alejandro Bednarik | System Enginner</h2>
 							</a>
-
-														<a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a>
-		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
-	<a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
-
-
-						
-						</div>
-					</div>
-					<div class="row no-collapse">
-						<div class="6u">
-							
-			
-						</div>
-						<div class="6u">
-							
-					
 						</div>
 					</div>
 				</div>
