--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -237,7 +237,6 @@
 				top: 0;
 				width: 100%;
 				height: 100%;
-				background: url('images/overlay.png');
 			}
 		
 			.image img
@@ -258,6 +257,7 @@
 			{
 				display: block;
 				width: 100%;
+				text-align: center;
 			}
 			
 			.image.left
