--- a/app/templates/pastingTeam.html
+++ b/app/templates/pastingTeam.html
@@ -3,9 +3,8 @@
 
 	<header>
 		<div class="container">
+			<i class="icon-pasting-logo" style="font-size: 15vh;color: rgb(47, 123, 187);"></i>
 			<h2>PASTING.IO</h2>
-			<p>Sharing is simple and fast. Kill the middle man.<br />
-			Your clipboard in all devices with one click; Anywhere, Anytime</p>
 		</div>
 	</header>
 
