--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -11,7 +11,7 @@
 		<ul class="menu">
 			<li><a href="/">PASTING.IO</a></li>
 			<li>&copy; JSCLOUD. All rights reserved.</li>
-			<li><a href="http://blog.pasting.io">TECH BLOG</a></li>
+			<li><a href="http://pastingio.blogspot.com.ar/">TECH BLOG</a></li>
 		</ul>
 	</div>
 </section>
