--- a/app/templates/pastingTeam.html
+++ b/app/templates/pastingTeam.html
@@ -4,17 +4,18 @@
 	<header>
 		<div class="container">
 			<i class="icon-pasting-logo" style="font-size: 15vh;color: rgb(47, 123, 187);"></i>
-			<h2>PASTING.IO</h2>
+			<h2>PASTING.IO TEAM</h2>
 		</div>
 	</header>
 
 	<div class="content dark style3">
 		<div class="container">
-			<h2>PASTING TEAM</h2>
+			<h2>PASTING PROJECT</h2>
 			<div class="row">
 				<div class="4u">
 					<section>
-						<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
+						<a href="http://pastingio.blogspot.com.ar/">Visit Our Tech Blog</a>
+						<!-- <h3>Augue vivamus sed ipsum commodo lorem dolor</h3> -->
 						<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
 						tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
 						vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
