--- a/app/templates/pastingConsole.html
+++ b/app/templates/pastingConsole.html
@@ -3,7 +3,7 @@
 
 	<header>
 		<div class="container">
-			<h2>PASTING FOR YOUR CONSOLE </h2>
+			<h2>GET PASTING FOR YOUR CONSOLE </h2>
 			<p>Use Pasting cli. Get the power for Linux and Mac. <br />
 			You may share directly from your console. <a href="#">[Watch video]</a></p>
 		</div>
