--- a/app/templates/userPublic.html
+++ b/app/templates/userPublic.html
@@ -3,13 +3,7 @@
 		<div class="container">
 			<h2>pasting.io/<%= obj.user %></h2>
 			<p></p>
-			<ul class="menu">
-				<!-- <li><a>COPY TEXT</a></li> -->
-				<li><a data-clipboard-text="http://pasting.io/<%= obj.user %>" title="Click to copy link" class="p-copy">COPY LINK</a></li>
-				<li><a>RAW</a></li>
-				<li><a>DELETE</a></li>
-			</ul>
-
+			<ul class="menu" id="defaultMenu"></ul>
 			<pre id="textArea"></pre>
 		</div>
 	</header>
