--- a/app/assets/css/codemirror.css
+++ b/app/assets/css/codemirror.css
@@ -318,7 +318,7 @@ div.CodeMirror-cursors {
 span.CodeMirror-selectedtext { background: none; }
 
 /* Based on Sublime Text's Monokai theme */
-.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2;}
+.cm-s-monokai.CodeMirror {background: #272822; color: #f8f8f2; border-radius: 0.5em;}
 .cm-s-monokai div.CodeMirror-selected {background: #49483E !important;}
 .cm-s-monokai .CodeMirror-gutters {background: #272822; border-right: 0px;}
 .cm-s-monokai .CodeMirror-guttermarker { color: white; }
