--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -560,7 +560,7 @@
 
 				table.default tbody tr
 				{
-					border: solid 1px #e6e6e6;
+					border: solid 0px #e6e6e6;
 				}
 			
 				table.default tbody tr:nth-child(2n+2)
@@ -611,7 +611,8 @@
 				
 					.dark table.default tbody tr:nth-child(2n+2)
 					{
-						background: rgba(255,255,255,0.1);
+						/*background: rgba(255,255,255,0.1); */
+						background: none;
 					}
 	
 	/* Button */
