--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -3,7 +3,7 @@
 <div class="container">
 	<section>
 		<header>
-			<h3>Other user pastes</h3>
+			<h3>Others user pastes</h3>
 		</header>
 		<div class="table-wrapper">
 			<table class="default">
