--- a/app/templates/pastingConsole.html
+++ b/app/templates/pastingConsole.html
@@ -5,7 +5,7 @@
 		<div class="container">
 			<h2>GET PASTING FOR YOUR CONSOLE </h2>
 			<p>Use Pasting cli. Get the power for Linux and Mac. <br />
-			You may share directly from your console. <a href="#">[Watch video]</a></p>
+			You can share directly from your console. <a href="#">[Watch video]</a></p>
 		</div>
 	</header>
 
@@ -22,7 +22,7 @@
 					<h2>Create your first pasting </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);;"> echo "Mi first pasting" | pasting </p>
 
-					<h2>Advanced pasting? Use the pipe and rocks! </h2>
+					<h2>Advanced pasting? Use the pipe and do all you've ever dreamt! </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);"> ls -la | pasting </p>
 				</div>
 		</div>
