--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -1,19 +1,13 @@
-<!-- mainFeatures -->
 <section id="mainFeatures" class="main">
-
-	<% if (obj.title) { %>
 	<header>
 		<div class="container">
 			<h2>PASTING.IO</h2>
 			<p>Sharing is simple and fast. Kill the middle man.<br />
-			Your clipboard in all devices with one click; Anywhere, Anytime</p>
+			Your clipboard in all devices with one click. Anytime, Anywhere.</p>
 		</div>
 	</header>
-	<% } %>
-
 	<div class="content dark style1 featured">
 		<div class="container">
-
 			<div class="row">
 				<div class="4u">
 					<section>
@@ -24,14 +18,16 @@
 						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere.</p>
 					</section>
 				</div>
-
 				<div class="4u">
 					<section>
 						<span class="feature-icon"><span class="icon fa-bullhorn"></span></span>
 						<header>
 							<h3>Fast & Free</h3>
 						</header>
-						<p>Sharing is fast now. </br> You can do it with a simple click and there is no need to pay anything for it. You can generate one or more accounts.</p>
+						<p>
+						Sharing is fast now. </br> 
+						You can do it with a simple click and there is no need to pay anything for it. You can generate one or more accounts.
+						</p>
 					</section>
 				</div>
 				<div class="4u">
@@ -40,20 +36,21 @@
 						<header>
 							<h3>By Nerds, for Nerds </h3>
 						</header>
-						<p>The code you've shared can be seen highlighted. Use Pasting.io in your console. <a href="#pastingConsole" class="scrolly">Get the powerfull pasting-cli. </a> Just thought for nerds! </p>
+						<p>
+							The code you've shared can be seen highlighted. Create pastes directly from your console. 
+							<a href="#pastingConsole" class="scrolly">Get pasting-cli. </a> 
+							Just thought for nerds! 
+						</p>
 					</section>
 				</div>
 			</div>
-
-
-
 			<div class="row">
 				<div class="12u">
 					<footer>
 						<% if (obj.header) { %>
-							<a href="#pasteText" class="button scrolly">Get Pasting Now !</a>
+							<a href="#pasteText" class="button scrolly">Start Pasting Now!</a>
 						<% } else { %>
-							<a href="/" class="button scrolly">Get Pasting Now !</a>
+							<a href="/">Start Pasting Now!</a>
 						<% } %>
 					</footer>
 				</div>
