--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,3 @@
-<!-- Footer -->
 <section id="footer">
 	<ul class="icons">
 		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -7,11 +6,11 @@
 		<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 	</ul>
 	<div class="copyright">
-		<a href="/team">OUR TEAM</a>
+		<a href="http://pastingio.blogspot.com.ar/">TECH BLOG</a>
 		<ul class="menu">
 			<li><a href="/">PASTING.IO</a></li>
 			<li>&copy; JSCLOUD. All rights reserved.</li>
-			<li><a href="http://pastingio.blogspot.com.ar/">TECH BLOG</a></li>
+			<li><a href="/team">OUR TEAM</a></li>
 		</ul>
 	</div>
 </section>
