--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,3 @@
-<!-- Default Header -->
 <section id="header" class="dark">
 	<i class="icon-pasting-logo"></i>
 	<header>
@@ -10,6 +9,6 @@
 	</header>
 	<footer>
 		<a href="#mainFeatures" class="button scrolly">Pasting Features</a>
-		<a href="#pasteText" class="button scrolly" id="pastingButton">Get Pasting Now</a>
+		<a href="#pasteText" class="button scrolly" id="pastingButton">Start Pasting Now!</a>
 	</footer>
 </section>
