--- a/app/templates/pastingTeam.html
+++ b/app/templates/pastingTeam.html
@@ -3,8 +3,8 @@
 
 	<header>
 		<div class="container">
-			<i class="icon-pasting-logo" style="font-size: 15vh;color: rgb(47, 123, 187);"></i>
-			<h2>PASTING.IO TEAM</h2>
+			<i class="icon-pasting-logo" style="font-size: 15vh;color: #000;"></i>
+			<h2>PASTING.IO</h2>
 		</div>
 	</header>
 
@@ -15,11 +15,13 @@
 				<div class="4u">
 					<section>
 						<a href="http://pastingio.blogspot.com.ar/">Visit Our Tech Blog</a>
-						<!-- <h3>Augue vivamus sed ipsum commodo lorem dolor</h3> -->
+						<!-- <h3></h3> -->
 						<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
 						tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante 
 						vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus 
-						augue cubilia vivamus nisi eu eget ornare varius gravida euismod.</p>
+						augue cubilia vivamus nisi eu eget ornare varius gravida euismod. salkdlaskdladka
+						alkdla;kd;laskd klsdm lksj lksj lksj lsj sj nsdkjh sdkjh kjsdh kjsh kjsh kjsh 
+						s jks kjhs kjsh jkh jksh jksh asnbd sdjk sdkj hksjh .</p>
 					</section>
 				</div>
 				<div class="8u">
@@ -40,6 +42,5 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 </section>
