--- a/app/templates/pastingSection.html
+++ b/app/templates/pastingSection.html
@@ -20,8 +20,8 @@
 				<div class="row">
 					<div class="12u">
 						<ul class="actions">
-							<li><input type="submit" class="button" value="Share Public" id="shareBtn" /></li>
-							<li><input type="submit" class="button" value="Share Private" id="shareBtnSecret" /></li>
+							<li><input type="submit" class="button" value="Share Public" id="shareBtn" data-protected="0" /></li>
+							<li><input type="submit" class="button" value="Share Secret" id="shareBtnPrivate" data-protected="1" /></li>
 							<!-- <li><input type="submit" class="button realTime" value="Real Time" id="realTimeBtn" /></li> -->
 							<!-- <li><input type="reset" class="button alt" value="Clear Text " /></li> -->
 						</ul>
