--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -28,7 +28,7 @@
 											<a href="http://api.pasting.io/raw/<%= paste.id %>" target="_blank">RAW</a>
 										</li>
 										<li>
-											<a data-documentid="<%= paste.id %>">DELETE</a>
+											<a class="delete" data-documentid="<%= paste.id %>">DELETE</a>
 										</li>
 									</ul>
 								</td>
