--- a/app/templates/pastingSection.html
+++ b/app/templates/pastingSection.html
@@ -1,4 +1,3 @@
-<!-- pastingSection -->
 <section id="pasteText" class="main">
 	<header>
 		<div class="container">
@@ -10,8 +9,8 @@
 		<div class="container 75%">
 			<form method="post" action="#" name="pastingForm">
 				<div class="row 50%">
-					<div class="6u"><input type="text" name="email" placeholder="Enter or create your username here" id="email" required /></div>
-					<div class="6u"><input type="text" placeholder="Enter or create your password here" id="pwd" /></div>
+					<div class="6u"><input type="text" name="username" placeholder="Create your username here" id="email" required /></div>
+					<div class="6u"><input type="password" placeholder="Create your password here" id="pwd" /></div>
 				</div>
 				<div class="row 50%">
 					<div class="12u"><textarea placeholder="Paste or type your text!" id="pastingStr" required></textarea></div>
@@ -22,8 +21,7 @@
 						<ul class="actions">
 							<li><input type="submit" class="button" value="Share Public" id="shareBtn" data-protected="0" /></li>
 							<li><input type="submit" class="button" value="Share Secret" id="shareBtnPrivate" data-protected="1" /></li>
-							<!-- <li><input type="submit" class="button realTime" value="Real Time" id="realTimeBtn" /></li> -->
-							<!-- <li><input type="reset" class="button alt" value="Clear Text " /></li> -->
+							<li><input type="reset" class="button alt" value="Clear Text " /></li>
 						</ul>
 					</div>
 				</div>
