--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -51,3 +51,48 @@
 .icon-pasting-logo:before {
 	content: "\e600";
 }
+
+.myGrandHead {
+	position: fixed;
+	width: 100%;
+	height: 55px;
+	color: white;
+	background-color: rgba(66, 104, 162, 1);
+	z-index: 99;
+	box-shadow: 0px 0px 15px white;
+	padding: 10px 20px 10px 20px;
+	font-size: 22px;
+	/* -webkit-filter: blur(1px);
+		opacity: 0.7;
+		*/
+}
+
+.myGrandHead i.icon-pasting-logo {
+	font-size: 33px;
+	float: left;
+	display: inline-block;
+}
+
+.myGrandHead nav {
+	float: right;
+	display: inline-block;
+}
+
+.myGrandHead nav a {
+	border: 0px;
+}
+
+#header {
+	z-index: 100;
+}
+
+.featureFlag {
+	border: 0px;
+	position: absolute;
+	bottom: 150px;
+}
+
+.featureFlag i{
+	font-size: 30px;
+}
+
