--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,14 +1,18 @@
 <section id="header" class="dark">
 	<i class="icon-pasting-logo"></i>
 	<header>
-		<!-- <h1>PASTING.IO </h1> -->
 		<p>Paste and share text or code. Simple, fast and free</p>
 		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
 		 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
 		</div>
 	</header>
 	<footer>
-		<a href="#mainFeatures" class="button scrolly">Pasting Features</a>
-		<a href="#pasteText" class="button scrolly" id="pastingButton">Start Pasting Now!</a>
+		<a href="#" class="button login" id="loginButtonHead">Login </a>
+		<a href="#pasteText" class="button scrolly" id="pastingButton">Sign Up</a>
 	</footer>
+
+	<br/>
+	
+	<a href="#mainFeatures" class="featureFlag scrolly"><i class="fa fa-chevron-down fa-5"></i></a>
+
 </section>
