--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -47,11 +47,8 @@
 			<div class="row">
 				<div class="12u">
 					<footer>
-						<% if (obj.header) { %>
-							<a href="#pasteText" class="button scrolly">Start Pasting Now!</a>
-						<% } else { %>
-							<a href="/">Start Pasting Now!</a>
-						<% } %>
+						<a href="#" class="button login" id="loginButtonHead">Login !</a>
+						<a href="#pasteText" class="button scrolly" id="pastingButton">Sign Up</a>
 					</footer>
 				</div>
 			</div>
